--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,12 @@
 
+PARSER
+
+mabye add timeouts if we are going to try and estimate real time.
+
+add something for this "30-second clock violation by MAR." found it on NCAA Play by play, not seen before 
+
+
+
 
 FACE OFF MATCHING 
 1. Browse games and find a quarter where cv < pbp (cv misses a face off)
